# zeek-test-package

./: .gitignore  CMakeLists.txt  COPYING  README  README.md
.github/workflows/: check.yml
broctl/: test-package.py
plugin/: CMakeLists.txt  README
plugin/scripts/: __load__.bro  __load__.zeek  __preload__.zeek
plugin/scripts/Demo/Rot13/: __load__.bro  __load__.zeek
plugin/src/: rot13.bif
scripts/Demo/Rot13/: __load__.bro
testing/Baseline/tests.main/: output
testing/Baseline/tests.rot13/: output
testing/tests/: main
